tests/baselines/reference/bases.errors.txt
==== tests/cases/compiler/bases.ts (10 errors) ====
    interface I {
        x;
    }
    
    class B {
        constructor() {
            this.y: any;
                  ~
!!! error TS1005: ';' expected.
                 ~
!!! error TS2094: The property 'y' does not exist on value of type 'B'.
                    ~~~
!!! error TS2095: Could not find symbol 'any'.
        }
    }
    
    class C extends B implements I {
          ~
!!! error TS2137: Class C declares interface I but does not implement it:
!!! 	Type 'C' is missing property 'x' from type 'I'.
        constructor() {
        ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
            this.x: any;
                  ~
!!! error TS1005: ';' expected.
                 ~
!!! error TS2094: The property 'x' does not exist on value of type 'C'.
                    ~~~
!!! error TS2095: Could not find symbol 'any'.
        }
    }
    
    new C().x;
            ~
!!! error TS2094: The property 'x' does not exist on value of type 'C'.
    new C().y;
            ~
!!! error TS2094: The property 'y' does not exist on value of type 'C'.
    
    